# copilot-api-python

./: README.md  api_config.py  approval.py  copilot_token.py  errors.py  forward_error.py  is_nullish.py  main.py  model_cache.py  paths.py  pyproject.toml  rate_limit.py  server.py  sleep.py  state.py  tokenizer.py  vscode_version.py
examples/strands-agent/: .env.example  README.md  agent.py  requirements.txt
routes/: anthropic.py  chat_completions.py  embeddings.py  models.py
services/: get_vscode_version.py
services/anthropic/: converters.py  streaming.py
services/copilot/: create_chat_completions.py  create_embeddings.py  get_models.py
services/github/: get_copilot_token.py  get_device_code.py  get_user.py  poll_access_token.py
