[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-api-python"
version = "0.1.0"
description = "Python implementation of Copilot API wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
]

[project.scripts]
copilot-api = "main:run"

[tool.setuptools]
py-modules = [
  "api_config",
  "approval",
  "copilot_api",
  "copilot_token",
  "errors",
  "forward_error",
  "is_nullish",
  "main",
  "model_cache",
  "paths",
  "rate_limit",
  "server",
  "sleep",
  "state",
  "tokenizer",
  "vscode_version",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["routes*", "services*"]
